added vim to tools

--- a/install-tools-centos.yml
+++ b/install-tools-centos.yml
@@ -9,6 +9,7 @@
         - epel-release
         - bash-completion
         - tmux
+        - vim
         state: present
         update_cache: true
       become: true
